@@ -1,58 +1,0 @@
-#!/usr/bin/env python3
-
-# {{ ansible_managed }}
-
-# welcome.py (C)JPMens 2024, OwnTracks
-
-import paho.mqtt.publish as mqtt
-import requests
-import json
-import random
-import time
-import sys
-import os
-
-# Publish a "welcome" message during bootstrapping
-
-username   = os.getenv("u", "{{ friends[0].username}}")
-devicename = os.getenv("d", "{{ friends[0].devicename}}")
-tid        = os.getenv("t", "{{ friends[0].tid}}")
-
-topic = "owntracks/%s/%s" % (username, devicename)
-
-geo = {}
-try:
-    r = requests.get("https://ifconfig.co/json")
-    geo = r.json()
-except Exception as e:
-    pass
-
-data = {
-    "_type"  : "location",
-    "tst"    : int(time.time()),
-    "lat"    : geo.get("latitude", 48.856826),  # Paris
-    "lon"    : geo.get("longitude", 2.292713),
-    "tid"    : tid,
-    "SSID"   : "welcome*wifi",
-    "batt"   : random.randint(1, 100),
-}
-
-payload = json.dumps(data)
-
-if len(sys.argv) > 1:
-    print(topic, payload)
-
-password_file = "{{ userdata }}/%s.pass" % (username)
-auth = {
-    "username" : username,
-    "password" : open(password_file, "r").read().rstrip(),
-}
-
-mqtt.single(topic, payload=payload,
-    qos=1,
-    retain=True,
-    hostname="localhost",
-    auth=auth,
-    port=1883,
-    transport="tcp")
-
